--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,9 @@ body {
     width:300px;
     padding:20px 40px 0px 50px;
 }
+.nav-link.active {
+    color: black;
+}
+.bg-dark-gray{
+    background-color:lightgrey;
+}
