--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,17 @@ body {
     outline: none;
     box-shadow: none;
 }
+.bg-dark-gray{
+    background-color:lightgray;
+}
+.card {
+    overflow: hidden;
+    border-radius: 8px; 
+}
 .card-img-top {
-    height: 300px;
-    width:300px;
-    padding:20px 40px 0px 50px;
+    object-fit: cover; 
+    width: 100%;
+    height: 200px;
 }
 .nav-link.active {
     color: black !important;
